# bRAG-ollama

./: .gitignore  .python-version  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
app/: __init__.py  db.py  main.py
app/chat/: api.py  constants.py  exceptions.py  ingest.py  models.py  readPdf.py  retrievals.py  services.py  streaming.py
app/core/: api.py  constants.py  logs.py  models.py
app/settings/: __init__.py  base.py
brag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
db/migrations/: 20240615100133_create_models.sql
db/queries/messages/: insert.sql
ollama/ollama/: id_ed25519  id_ed25519.pub
requirements/: requirements-dev.txt  requirements.txt
static/: index.html
ui/: Dockerfile  package-lock.json  package.json
ui/src/routes/: +layout.svelte  +page.svelte
